add fonts and scripts

--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <title>Page Title</title>
+    <title>zoltankerezsi.xyz</title>
+    <link rel="stylesheet" href="assets/styles.css" />
   </head>
 
   <body>
-    Welcome to my website!
+    <main>
+      <h1 class="montserrat">This should be rendered with Montserrat font</h1>
+      <p class="lora">This text should be render using the Lora font.</p>
+      <code>Welcome to my website!</code>
+    </main>
   </body>
 </html>
