remove Montserrat, Lora fonts

--- a/index.html
+++ b/index.html
@@ -4,14 +4,107 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>zoltankerezsi.xyz</title>
-    <link rel="stylesheet" href="assets/styles.css" />
+    <link rel="stylesheet" href="/assets/styles.css" />
   </head>
 
   <body>
     <main>
-      <h1 class="montserrat">This should be rendered with Montserrat font</h1>
-      <p class="lora">This text should be render using the Lora font.</p>
+      <div
+        style="
+          margin: auto;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          padding: 1rem;
+        "
+      >
+        <img
+          src="/assets/zkerezsi.svg"
+          width="180px"
+          style="border-radius: 50%"
+        />
+        <span style="font-size: 1.25rem; padding: 0.5rem; font-weight: bold"
+          >Zoltan Kristof Kerezsi</span
+        >
+      </div>
+      <h1>This should be rendered with a sans-serif font</h1>
+      <h2>This text should be rendered using a serif font.</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Id aliquet lectus
+        proin nibh nisl. Sit amet dictum sit amet justo donec. A diam
+        sollicitudin tempor id eu. Purus in massa tempor nec feugiat nisl
+        pretium fusce. Ornare aenean euismod elementum nisi quis eleifend quam
+        adipiscing vitae. Sed faucibus turpis in eu mi bibendum neque. Eget
+        nullam non nisi est sit amet facilisis magna etiam. Scelerisque eleifend
+        donec pretium vulputate sapien nec sagittis aliquam malesuada. Faucibus
+        purus in massa tempor nec feugiat. Dui sapien eget mi proin sed libero
+        enim. Sem nulla pharetra diam sit amet nisl suscipit adipiscing
+        bibendum. Aliquet nibh praesent tristique magna sit amet purus gravida
+        quis. Id diam vel quam elementum. Nullam vehicula ipsum a arcu cursus
+        vitae. Consectetur libero id faucibus nisl tincidunt eget nullam non.
+      </p>
+      <p>
+        Dui ut ornare lectus sit amet. Risus commodo viverra maecenas accumsan
+        lacus vel. Mus mauris vitae ultricies leo integer malesuada nunc. Lacus
+        vel facilisis volutpat est velit egestas. Porttitor massa id neque
+        aliquam vestibulum morbi blandit cursus risus. Sit amet consectetur
+        adipiscing elit duis tristique sollicitudin nibh. Porttitor eget dolor
+        morbi non arcu risus. Odio eu feugiat pretium nibh ipsum. Mauris nunc
+        congue nisi vitae suscipit tellus mauris. Tempus imperdiet nulla
+        malesuada pellentesque elit. Gravida in fermentum et sollicitudin ac
+        orci. Quam id leo in vitae turpis massa. Eget egestas purus viverra
+        accumsan. Sapien nec sagittis aliquam malesuada bibendum arcu vitae.
+        Tellus elementum sagittis vitae et. Justo donec enim diam vulputate ut
+        pharetra sit. Tempus urna et pharetra pharetra massa massa ultricies mi
+        quis. Donec enim diam vulputate ut. Eleifend mi in nulla posuere
+        sollicitudin aliquam. Nisi lacus sed viverra tellus in hac habitasse
+        platea dictumst.
+      </p>
+      <p>
+        Aenean pharetra magna ac placerat vestibulum lectus mauris ultrices
+        eros. Amet risus nullam eget felis eget nunc lobortis. Nec ullamcorper
+        sit amet risus nullam eget felis. Tellus rutrum tellus pellentesque eu
+        tincidunt. Sagittis orci a scelerisque purus semper eget duis. Vel quam
+        elementum pulvinar etiam non quam lacus. Adipiscing elit pellentesque
+        habitant morbi tristique senectus et. Fermentum dui faucibus in ornare
+        quam viverra orci sagittis. Diam sit amet nisl suscipit adipiscing. Nunc
+        sed augue lacus viverra. Ornare massa eget egestas purus viverra
+        accumsan in nisl nisi. Purus non enim praesent elementum facilisis leo
+        vel.
+      </p>
+      <p>
+        Tellus id interdum velit laoreet id donec ultrices tincidunt arcu.
+        Viverra nam libero justo laoreet sit amet cursus sit amet. Non sodales
+        neque sodales ut etiam. Id velit ut tortor pretium viverra. Ac ut
+        consequat semper viverra nam libero justo laoreet. Tincidunt lobortis
+        feugiat vivamus at. Iaculis nunc sed augue lacus viverra vitae congue eu
+        consequat. Vulputate dignissim suspendisse in est ante in nibh mauris.
+        Ante in nibh mauris cursus mattis molestie. Etiam sit amet nisl purus.
+        Eu scelerisque felis imperdiet proin fermentum. Egestas diam in arcu
+        cursus euismod quis. Ornare quam viverra orci sagittis. Augue ut lectus
+        arcu bibendum at varius vel pharetra vel. Quis eleifend quam adipiscing
+        vitae proin sagittis nisl rhoncus.
+      </p>
+      <p>
+        Morbi tristique senectus et netus et. Viverra maecenas accumsan lacus
+        vel facilisis volutpat est velit egestas. Vitae auctor eu augue ut
+        lectus arcu bibendum at varius. Augue ut lectus arcu bibendum at varius
+        vel pharetra vel. Id semper risus in hendrerit gravida rutrum. Consequat
+        nisl vel pretium lectus quam. Integer enim neque volutpat ac tincidunt
+        vitae semper quis lectus. Rhoncus urna neque viverra justo. Molestie
+        nunc non blandit massa enim nec dui. Odio facilisis mauris sit amet
+        massa vitae tortor condimentum lacinia. Nibh ipsum consequat nisl vel
+        pretium lectus quam id leo. Ipsum suspendisse ultrices gravida dictum
+        fusce ut placerat orci nulla. Congue mauris rhoncus aenean vel elit
+        scelerisque mauris. Interdum velit euismod in pellentesque massa.
+        Ultrices gravida dictum fusce ut placerat orci nulla pellentesque. Nec
+        dui nunc mattis enim ut.
+      </p>
       <code>Welcome to my website!</code>
     </main>
+    <footer>
+      <a href="https://zoltankerezsi.xyz">https://zoltankerezsi.xyz</a>
+    </footer>
   </body>
 </html>
