add link to home on avatar image

--- a/index.html
+++ b/index.html
@@ -8,25 +8,32 @@
   </head>
 
   <body>
-    <main>
-      <div
+    <header>
+      <a
+        href="/"
         style="
           margin: auto;
           display: flex;
           flex-direction: column;
           align-items: center;
-          padding: 1rem;
-        "
-      >
+          padding: 1.5rem;
+        ">
         <img
           src="/assets/zkerezsi.svg"
           width="180px"
-          style="border-radius: 50%"
-        />
-        <span style="font-size: 1.25rem; padding: 0.5rem; font-weight: bold"
-          >Zoltan Kristof Kerezsi</span
-        >
-      </div>
+          style="border-radius: 50%" />
+        <span
+          style="
+            font-size: 1.25rem;
+            padding: 0.5rem;
+            font-weight: bold;
+            color: gainsboro;
+          ">
+          Zoltan Kristof Kerezsi
+        </span>
+      </a>
+    </header>
+    <main>
       <h1>This should be rendered with a sans-serif font</h1>
       <h2>This text should be rendered using a serif font.</h2>
       <p>
@@ -104,7 +111,7 @@
       <code>Welcome to my website!</code>
     </main>
     <footer>
-      <a href="https://zoltankerezsi.xyz">https://zoltankerezsi.xyz</a>
+      <a href="/">https://zoltankerezsi.xyz</a>
     </footer>
   </body>
 </html>
