--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
           display: flex;
           flex-direction: column;
           align-items: center;
-          padding: 1.5rem;
         ">
         <img
           src="/assets/zkerezsi.svg"
@@ -25,7 +24,7 @@
         <span
           style="
             font-size: 1.25rem;
-            padding: 0.5rem;
+            padding-top: 2rem;
             font-weight: bold;
             color: gainsboro;
           ">
