setup generation of html from md

--- a/template.html
+++ b/template.html
@@ -33,10 +33,7 @@
         </span>
       </a>
     </header>
-    <main><h1 id="introduction">Introduction</h1>
-<p>Welcome to my website!</p>
-<h1 id="articles">Articles</h1>
-<p><a href="/articles/test.html">Test</a></p></main>
+    <main>$ARTICLE</main>
     <footer>
       <a href="/">https://zoltankerezsi.xyz</a>
     </footer>
