modify font size, cleanup some things

--- a/template.html
+++ b/template.html
@@ -33,7 +33,7 @@
         </span>
       </a>
     </header>
-    <main>$ARTICLE</main>
+    <main>${ARTICLE}</main>
     <footer>
       <a href="/">https://zoltankerezsi.xyz</a>
     </footer>
