implement blockqoute style

--- a/404.html
+++ b/404.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta http-equiv="refresh" content="0; url=/" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>zoltankerezsi.xyz</title>
     <link rel="stylesheet" href="/assets/styles.css" />
     <link rel="icon" href="/assets/zkerezsi.svg" />
-    <meta http-equiv="refresh" content="0; url=/" />
   </head>
   <body>
     <h1>Page not found :(</h1>
-    <p>Redirecting to https://zoltankerezsi.xyz...</p>
+    <p>Redirecting to <a href="/">https://zoltankerezsi.xyz</a>...</p>
   </body>
 </html>
