--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meat name="author" content="Zoltan Kristof Kerezsi" />
+    <meta name="author" content="Zoltan Kristof Kerezsi" />
     <title>zoltankerezsi.xyz</title>
     <link rel="stylesheet" href="/assets/styles.css" />
     <link rel="icon" href="/assets/zkerezsi.svg" />
