fix image styling

--- a/index.html
+++ b/index.html
@@ -23,13 +23,7 @@
           src="/assets/zkerezsi.svg"
           width="160px"
           style="border-radius: 50%" />
-        <span
-          style="
-            font-size: 1.25rem;
-            padding-top: 2rem;
-            font-weight: bold;
-            color: gainsboro;
-          ">
+        <span style="font-size: 1.25rem; font-weight: bold; color: gainsboro">
           Zoltan Kristof Kerezsi
         </span>
       </a>
