--- a/lorem-ipsum.html
+++ b/lorem-ipsum.html
@@ -23,13 +23,7 @@
           src="/assets/zkerezsi.svg"
           width="160px"
           style="border-radius: 50%" />
-        <span
-          style="
-            font-size: 1.25rem;
-            padding-top: 2rem;
-            font-weight: bold;
-            color: gainsboro;
-          ">
+        <span style="font-size: 1.25rem; font-weight: bold; color: gainsboro">
           Zoltan Kristof Kerezsi
         </span>
       </a>
@@ -50,6 +44,10 @@ consectetur lacus ipsum, in auctor metus pretium eget. Vestibulum dolor
 justo, sagittis nec ultrices vel, accumsan at ante. Donec vel velit sed
 dui cursus dapibus. Fusce sed velit risus. Integer eu velit et quam
 convallis lobortis.</p>
+<figure>
+<img src="/mount_sinai.jpg" alt="Mount Sinai" />
+<figcaption aria-hidden="true">Mount Sinai</figcaption>
+</figure>
 <p>Donec cursus id ipsum non scelerisque. Sed at mi varius, facilisis
 justo in, rutrum sapien. Sed vel lorem leo. Ut blandit tortor ut metus
 sagittis, at mattis mauris fermentum. Proin egestas nibh justo. Etiam
