--- a/notes.html
+++ b/notes.html
@@ -11,21 +11,9 @@
 
   <body>
     <header>
-      <a
-        href="/"
-        style="
-          margin: auto;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-        ">
-        <img
-          src="/assets/zkerezsi.svg"
-          width="160px"
-          style="border-radius: 50%" />
-        <span style="font-size: 1.25rem; font-weight: bold; color: gainsboro">
-          Zoltan Kristof Kerezsi
-        </span>
+      <a class="avatar-a" href="/">
+        <img class="avatar-img" src="/assets/zkerezsi.svg" />
+        <span class="avatar-text"> Zoltan Kristof Kerezsi </span>
       </a>
     </header>
     <main><h1 id="my-personal-blog">My personal blog</h1>
