--- a/template.html
+++ b/template.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <a class="avatar-a" href="/">
-        <img class="avatar-img" src="/assets/zkerezsi.svg" />
+        <img class="avatar-img" src="/assets/avatar.png" />
         <span class="avatar-text"> Zoltan Kristof Kerezsi </span>
       </a>
     </header>
