add more blog links

--- a/index.html
+++ b/index.html
@@ -27,16 +27,34 @@ href="/markdown-feature-test.html">Markdown feature test</a></li>
 </ul>
 <h1 id="interesting-blogs-i-follow">Interesting blogs I follow</h1>
 <ul>
-<li><a href="https://hackeradam.com/">https://hackeradam.com/</a></li>
-<li><a href="https://www.apalrd.net/">https://www.apalrd.net/</a></li>
-<li><a
-href="https://www.sensorsiot.org/">https://www.sensorsiot.org/</a></li>
-<li><a
-href="https://www.seanosier.com/">https://www.seanosier.com/</a></li>
-<li><a href="https://thelinuxexp.com/">https://thelinuxexp.com/</a></li>
-<li><a href="https://landchad.net">https://landchad.net</a></li>
-<li><a href="https://linusakesson.net">https://linusakesson.net</a></li>
-<li><a href="https://unixism.net">https://unixism.net</a></li>
+<li><a href="https://hackeradam.com"
+class="uri">https://hackeradam.com</a></li>
+<li><a href="https://www.apalrd.net"
+class="uri">https://www.apalrd.net</a></li>
+<li><a href="https://www.sensorsiot.org"
+class="uri">https://www.sensorsiot.org</a></li>
+<li><a href="https://www.seanosier.com"
+class="uri">https://www.seanosier.com</a></li>
+<li><a href="https://thelinuxexp.com"
+class="uri">https://thelinuxexp.com</a></li>
+<li><a href="https://landchad.net"
+class="uri">https://landchad.net</a></li>
+<li><a href="https://linusakesson.net"
+class="uri">https://linusakesson.net</a></li>
+<li><a href="https://unixism.net"
+class="uri">https://unixism.net</a></li>
+<li><a href="https://rgoulter.com"
+class="uri">https://rgoulter.com</a></li>
+<li><a href="https://gpfault.net"
+class="uri">https://gpfault.net</a></li>
+<li><a href="https://blog.reverberate.org"
+class="uri">https://blog.reverberate.org</a></li>
+<li><a href="https://fasterthanli.me"
+class="uri">https://fasterthanli.me</a></li>
+<li><a href="https://www.joelonsoftware.com"
+class="uri">https://www.joelonsoftware.com</a></li>
+<li><a href="https://leonbambrick.com"
+class="uri">https://leonbambrick.com</a></li>
 </ul></main>
     <footer>
       <a href="/">https://zoltankerezsi.xyz</a>
