--- a/notes.html
+++ b/notes.html
@@ -30,6 +30,13 @@
 <li>https://www.thelatinlibrary.com/</li>
 <li>https://flatassembler.net</li>
 <li>https://en.wikipedia.org/wiki/VT100</li>
+</ul>
+<h2 id="improvement-ideas">Improvement ideas</h2>
+<ul>
+<li>https://daringfireball.net/projects/markdown/syntax.text</li>
+<li>https://css-tricks.com/snippets/html/open-link-in-a-new-window/</li>
+<li>https://raw.githubusercontent.com/KuoE0/blog-assets/master/content-photos/2013-10-30-ansi-vt100-text-style-control-code-1.png</li>
+<li>https://catppuccin.com/palette</li>
 </ul></main>
     <footer>
       <a href="/">https://zoltankerezsi.xyz</a>
